--- a/cs229_project.ipynb
+++ b/cs229_project.ipynb
@@ -347,6 +347,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Regression Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -413,15 +420,19 @@
    "source": [
     "y = merged_data[\"Metastatic Recurrence Time\"].dropna() \n",
     "X = merged_data\n",
+    "\n",
     "# Remove the target variable from features\n",
     "X = X.drop(columns=[\"Metastatic Recurrence Time\"], errors=\"ignore\")\n",
+    "\n",
     "# Align X and y\n",
     "X = X.loc[y.index].reset_index(drop=True) \n",
     "y = y.reset_index(drop=True)\n",
+    "\n",
     "# Encode categorical variables\n",
     "categorical_columns = X.select_dtypes(include=[\"object\"]).columns\n",
     "encoder = OrdinalEncoder(handle_unknown=\"use_encoded_value\", unknown_value=-1)\n",
     "X[categorical_columns] = encoder.fit_transform(X[categorical_columns])\n",
+    "\n",
     "# Ensure all remaining features are numeric\n",
     "X = X.apply(pd.to_numeric, errors='coerce')\n",
     "\n",
@@ -662,7 +673,7 @@
     "# Define XGBoost model\n",
     "XGB_model = XGBRegressor(random_state=0, n_estimators=100, learning_rate=0.1, max_depth=5, enable_categorical=True)\n",
     "\n",
-    "# Define features to include\n",
+    "# Define features to include \n",
     "features_to_include = [\"Cancer Type\", \"Cancer Type Detailed\", \"Disease Free Event\", \"Disease Free (Months)\", \"ER PCT Primary\", \n",
     "                       \"ER Status of Sequenced Sample\", \"ER Status of the Primary\", \"Fraction Genome Altered\", \"HER2 FISH Status of Sequenced Sample\", \n",
     "                       \"HER2 FISH Ratio Value of Sequenced Sample\", \"HER2 FISH Ratio Primary\", \"HER2 FISH Status (Report and ASCO) of Primary\", \n",
