--- a/cs229_project.ipynb
+++ b/cs229_project.ipynb
@@ -128,7 +128,8 @@
     "bc_data = pd.read_csv('breast_msk_2018_clinical_data.tsv', sep='\\t') \n",
     "cnv_df = pd.read_csv(\"breast_msk_2018_segments.seg\", sep=\"\\t\") \n",
     "print(bc_data.head())\n",
-    "print(cnv_df.head())"
+    "print(cnv_df.head())\n",
+    "# change"
    ]
   },
   {
