--- a/cs229_project.ipynb
+++ b/cs229_project.ipynb
@@ -60,8 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-
-
    "metadata": {},
    "outputs": [
     {
@@ -968,8 +966,24 @@
    "source": [
     "# Code to run a hyperparameter search for the CNN"
    ]
-
-    
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add code here\n",
+    "\n",
+    "# evaluation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
