--- a/cs229_project.ipynb
+++ b/cs229_project.ipynb
@@ -1072,7 +1072,6 @@
     }
    ],
    "source": [
-    "# Parameter tuning for Random Forest models\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -1082,15 +1081,12 @@
     "from sksurv.ensemble import RandomSurvivalForest\n",
     "from sksurv.metrics import concordance_index_censored\n",
     "\n",
-    "# Define parameter grids\n",
     "n_estimators_list = [50, 100, 200, 300, 400]\n",
     "max_depth_list = [None, 3, 5, 7, 10, 15]\n",
     "\n",
-    "# Dictionaries to store results\n",
     "survival_results = np.zeros((len(n_estimators_list), len(max_depth_list)))\n",
     "classification_results = np.zeros((len(n_estimators_list), len(max_depth_list)))\n",
     "\n",
-    "# 1. Parameter tuning for Survival model\n",
     "print(\"Tuning Random Survival Forest parameters...\")\n",
     "for i, n_est in enumerate(n_estimators_list):\n",
     "    for j, depth in enumerate(max_depth_list):\n",
@@ -1107,7 +1103,6 @@
     "        survival_results[i, j] = c_index[0]\n",
     "        print(f\"n_estimators={n_est}, max_depth={depth}, C-index={c_index[0]:.3f}\")\n",
     "\n",
-    "# 2. Parameter tuning for Classification model\n",
     "print(\"\\nTuning Random Forest Classifier parameters...\")\n",
     "for i, n_est in enumerate(n_estimators_list):\n",
     "    for j, depth in enumerate(max_depth_list):\n",
@@ -1125,10 +1120,8 @@
     "        classification_results[i, j] = auc\n",
     "        print(f\"n_estimators={n_est}, max_depth={depth}, AUC={auc:.3f}\")\n",
     "\n",
-    "# Create plots\n",
     "fig, axes = plt.subplots(1, 2, figsize=(16, 7))\n",
     "\n",
-    "# Plot for Survival Model\n",
     "im1 = axes[0].imshow(survival_results, cmap='viridis', interpolation='nearest')\n",
     "axes[0].set_title('Random Survival Forest\\nConcordance Index by Parameters')\n",
     "axes[0].set_xlabel('Max Depth')\n",
@@ -1138,7 +1131,6 @@
     "axes[0].set_xticklabels([str(d) if d is not None else \"None\" for d in max_depth_list])\n",
     "axes[0].set_yticklabels(n_estimators_list)\n",
     "\n",
-    "# Add colorbar\n",
     "cbar1 = fig.colorbar(im1, ax=axes[0])\n",
     "cbar1.set_label('Concordance Index')\n",
     "\n",
@@ -1167,10 +1159,8 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Line plots for better interpretation\n",
     "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
-    "# Line plot for number of trees (n_estimators)\n",
     "for j, depth in enumerate(max_depth_list):\n",
     "    depth_label = str(depth) if depth is not None else \"None\"\n",
     "    axes[0].plot(n_estimators_list, survival_results[:, j], marker='o', label=f'max_depth={depth_label}')\n",
@@ -1191,10 +1181,9 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Line plot for max_depth\n",
     "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
     "\n",
-    "max_depth_list_plot = [0 if d is None else d for d in max_depth_list]  # Replace None with 0 for plotting\n",
+    "max_depth_list_plot = [0 if d is None else d for d in max_depth_list] \n",
     "\n",
     "for i, n_est in enumerate(n_estimators_list):\n",
     "    axes[0].plot(max_depth_list_plot, survival_results[i, :], marker='o', label=f'n_trees={n_est}')\n",
