--- a/cs229_project.ipynb
+++ b/cs229_project.ipynb
@@ -60,6 +60,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -355,9 +356,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params (Inner CV): {'feature_selection__k': 10, 'regressor': Ridge(), 'regressor__alpha': 0.001}, Best Validation RMSE: 0.2903\n",
+      "Top 10 selected features: ['Disease Free (Months)', 'HER2 FISH Status (Report and ASCO) of Primary', 'Invasive Carcinoma Diagnosis Age', 'Time to Diagnosis Invasive Carcinoma', 'Menopausal Status At Diagnosis', 'Mutation Count', 'Overall Patient HER2 Status', 'Prior Breast Primary', 'TMB (nonsynonymous)', 'total_segments']\n",
+      "Training RMSE: 0.2866\n",
+      "Test RMSE: 0.3034\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params (Inner CV): {'feature_selection__k': 10, 'regressor': Ridge(alpha=0.001), 'regressor__alpha': 0.001}, Best Validation RMSE: 0.2956\n",
+      "Top 10 selected features: ['Disease Free (Months)', 'HER2 IHC Status Primary', 'Invasive Carcinoma Diagnosis Age', 'Time to Diagnosis Invasive Carcinoma', 'M Stage', 'Menopausal Status At Diagnosis', 'Mutation Count', 'Prior Breast Primary', 'T Stage', 'TMB (nonsynonymous)']\n",
+      "Training RMSE: 0.2916\n",
+      "Test RMSE: 0.2804\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params (Inner CV): {'feature_selection__k': 10, 'regressor': Ridge(alpha=0.001), 'regressor__alpha': 0.001}, Best Validation RMSE: 0.2925\n",
+      "Top 10 selected features: ['Disease Free (Months)', 'Invasive Carcinoma Diagnosis Age', 'Time to Diagnosis Invasive Carcinoma', 'M Stage', 'Menopausal Status At Diagnosis', 'Mutation Count', 'Prior Breast Primary', 'T Stage', 'TMB (nonsynonymous)', 'total_segments']\n",
+      "Training RMSE: 0.2885\n",
+      "Test RMSE: 0.2922\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Params (Inner CV): {'feature_selection__k': 10, 'regressor': Ridge(alpha=0.001), 'regressor__alpha': 0.001}, Best Validation RMSE: 0.2910\n",
+      "Top 10 selected features: ['Disease Free (Months)', 'Invasive Carcinoma Diagnosis Age', 'Time to Diagnosis Invasive Carcinoma', 'Menopausal Status At Diagnosis', 'Mutation Count', 'Overall Patient HER2 Status', 'Prior Breast Primary', 'TMB (nonsynonymous)', 'total_segments', 'mean_cnv_chr17']\n",
+      "Training RMSE: 0.2863\n",
+      "Test RMSE: 0.3022\n",
+      "Best Params (Inner CV): {'feature_selection__k': 10, 'regressor': Ridge(alpha=0.001), 'regressor__alpha': 0.001}, Best Validation RMSE: 0.2921\n",
+      "Top 10 selected features: ['Disease Free (Months)', 'Invasive Carcinoma Diagnosis Age', 'Time to Diagnosis Invasive Carcinoma', 'Menopausal Status At Diagnosis', 'Mutation Count', 'Prior Breast Primary', 'T Stage', 'TMB (nonsynonymous)', 'total_segments', 'mean_cnv_chr17']\n",
+      "Training RMSE: 0.2888\n",
+      "Test RMSE: 0.2885\n",
+      "Mean Train RMSE: 0.2884\n",
+      "Mean Test RMSE: 0.2933\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/numpy/ma/core.py:2820: RuntimeWarning: invalid value encountered in cast\n",
+      "  _data = np.array(data, dtype=dtype, copy=copy,\n"
+     ]
+    }
+   ],
    "source": [
     "y = merged_data[\"Metastatic Recurrence Time\"].dropna() \n",
     "X = merged_data\n",
@@ -484,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -507,15 +595,11 @@
     "\n",
     "# Plot Test RMSE\n",
     "plt.plot(iterations, rmse_test_scores, label=\"Test RMSE\", marker='s', linestyle='--')\n",
-    "\n",
-    "# Formatting the plot\n",
     "plt.xlabel(\"K-Fold Number\")\n",
     "plt.ylabel(\"RMSE\")\n",
     "plt.title(\"Training vs. Test RMSE Over K-folds\")\n",
     "plt.legend()\n",
     "plt.grid(True)\n",
-    "\n",
-    "# Show the plot\n",
     "plt.show()"
    ]
   },
@@ -529,14 +613,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-rmse:128.49558\tvalid-rmse:132.24791\n"
+      "[0]\ttrain-rmse:128.49558\tvalid-rmse:132.24791\n",
+      "[10]\ttrain-rmse:49.45776\tvalid-rmse:56.06226\n",
+      "[20]\ttrain-rmse:20.99815\tvalid-rmse:33.38377\n",
+      "[30]\ttrain-rmse:10.34374\tvalid-rmse:27.52395\n"
      ]
     },
     {
@@ -555,9 +642,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10]\ttrain-rmse:49.45776\tvalid-rmse:56.06226\n",
-      "[20]\ttrain-rmse:20.99815\tvalid-rmse:33.38377\n",
-      "[30]\ttrain-rmse:10.34374\tvalid-rmse:27.52395\n",
       "[40]\ttrain-rmse:5.93962\tvalid-rmse:25.07183\n",
       "[50]\ttrain-rmse:4.00422\tvalid-rmse:23.95817\n",
       "[60]\ttrain-rmse:2.97059\tvalid-rmse:23.40952\n",
@@ -701,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -714,47 +798,43 @@
       "  T = new_sum / new_sample_count\n",
       "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/sklearn/utils/extmath.py:1162: RuntimeWarning: invalid value encountered in divide\n",
       "  new_unnormalized_variance -= correction**2 / new_sample_count\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:11] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:34] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:12] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:35] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:13] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:36] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:14] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:37] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:15] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:38] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:16] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:39] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:17] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:40] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:18] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:41] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:19] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:42] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:20] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
-      "Parameters: { \"n_estimators\" } are not used.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:21] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:43] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -862,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +965,9 @@
       "[130]\ttrain-rmse:5.85114\tvalid-rmse:14.18984\n",
       "[140]\ttrain-rmse:5.52314\tvalid-rmse:13.95663\n",
       "[150]\ttrain-rmse:5.25783\tvalid-rmse:13.94927\n",
-      "[160]\ttrain-rmse:5.02477\tvalid-rmse:13.80986\n"
+      "[160]\ttrain-rmse:5.02477\tvalid-rmse:13.80986\n",
+      "[170]\ttrain-rmse:4.83701\tvalid-rmse:13.69314\n",
+      "[180]\ttrain-rmse:4.62762\tvalid-rmse:13.55672\n"
      ]
     },
     {
@@ -898,7 +980,7 @@
       "  T = new_sum / new_sample_count\n",
       "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/sklearn/utils/extmath.py:1162: RuntimeWarning: invalid value encountered in divide\n",
       "  new_unnormalized_variance -= correction**2 / new_sample_count\n",
-      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:00:21] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
+      "/Users/imogengardiner/anaconda3/envs/202env/lib/python3.9/site-packages/xgboost/core.py:158: UserWarning: [23:02:43] WARNING: /var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_d9k8pmaj4_/croot/xgboost-split_1724073758172/work/src/learner.cc:740: \n",
       "Parameters: { \"n_estimators\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -908,8 +990,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[170]\ttrain-rmse:4.83701\tvalid-rmse:13.69314\n",
-      "[180]\ttrain-rmse:4.62762\tvalid-rmse:13.55672\n",
       "[190]\ttrain-rmse:4.42176\tvalid-rmse:13.46385\n",
       "[199]\ttrain-rmse:4.25366\tvalid-rmse:13.35522\n",
       "Optimized Test RMSE: 12.39\n"
@@ -1050,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1220,6 @@
     "plt.show()\n",
     "\n",
     "print(\"\\nCross-validation Results:\")\n",
-    "\n",
     "k_fold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
     "cv_scores_os = []\n",
     "\n",
@@ -1160,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
